<resources>
    <string name="app_name">FunnyCounters</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clear_fragments_btn_string">Очистить</string>
    <string name="clear_counters_btn_string">Обнулить</string>
    <string name="title_activity_choose_fragment">ChooseFragmentActivity</string>
    <string name="fragment_1">Фрагмент бегущий</string>
    <string name="fragment_2">Фрагмент вращающийся</string>
    <string name="fragment_3">Фрагмент Прыгающий</string>
    <string name="fragment_4">Фрагмент Миграющий</string>
    <string name="fragment_5">Фрагмент пустой</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="counter_string">0</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="press_me_string_textview">Нажми на меня</string>
    <string name="iam_invis_string">Я невидимый</string>
</resources>
